adição de bot.py

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 DB_URI=mongodb+srv://<username>:<password>@<cluster>.w1owvej.mongodb.net/<database>
 # link para a conexão com o banco de dados
+
+#chaves para o twitter/X, geradas pelo site de desenvolvimento da rede social
+TWT_CONSUMER_KEY=
+TWT_CONSUMER_SECRET=
+
+TWT_ACCESS_TOKEN=
+TWT_ACCESS_TOKEN_SECRET=
